feat: Add send password recovery email user controller
