# internal/controller/http/v1/user_controller.go
@@ -9,6 +9,7 @@ import (
 
 type UserController interface {
 	SignUp(c *gin.Context)
+	SendPasswordRecoveryEmail(c *gin.Context)
 }
 
 type userController struct {
@@ -57,4 +58,40 @@ func (u *userController) SignUp(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusCreated, res)
+}
+
+// SendPasswordRecoveryEmail godoc
+// @Summary Send password recovery email
+// @Description 비밀번호 복구 이메일 전송
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param request body SendPasswordRecoveryEmailRequest true "SendPasswordRecoveryEmailRequest Request"
+// @Success 201 {object} SendPasswordRecoveryEmailResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /api/v1/users/password/recovery [post]
+func (u *userController) SendPasswordRecoveryEmail(c *gin.Context) {
+	var req SendPasswordRecoveryEmailRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		HandleError(c, ErrInvalidRequestBody)
+		return
+	}
+
+	bashURL := getBaseURL(c)
+	if err := u.userUsecase.SendPasswordRecoveryEmail(bashURL, req.Email); err != nil {
+		HandleError(c, err)
+		return
+	}
+
+	res := SendPasswordRecoveryEmailResponse{}
+	c.JSON(http.StatusOK, res)
+}
+
+func getBaseURL(c *gin.Context) string {
+	scheme := "http"
+	if c.Request.TLS != nil {
+		scheme = "https"
+	}
+	return scheme + "://" + c.Request.Host
 }
